feature: fix Discus to GitHub Discussions migrating tool
GH Discussions have 2 levels max